--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -33,13 +33,13 @@
         </div>
       </div>
 
-      <!-- Çıkış butonu -->
+      <!-- Çıkış butonu 
       <button 
         (click)="authService.logout()" 
         class="ml-3 px-4 py-2 rounded-lg bg-orange-600 hover:bg-orange-700 transition"
       >
         Çıkış Yap
-      </button>
+      </button>-->
     </ng-container>
 
     <!-- Kullanıcı giriş yapmamışsa -->
