--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -25,44 +25,66 @@
     
 
 </div>-->
-<div class="flex h-[80vh] bg-gray-50/50">
-  <aside class="flex flex-col w-20 bg-gray-100 rounded-2xl shadow-lg m-4 transition-all duration-300">
-    <nav class="flex-1 space-y-2 p-2">
+<aside 
+  [class]="isOpen() ? 'w-20' : 'w-16'" 
+  class="bg-gray-100 rounded-2xl shadow-lg m-4 transition-all duration-300 overflow-hidden flex-shrink-0"
+  style="width: 62px; height: 414px;"> 
+  
+  <nav class="flex flex-col h-full">
+    <div class="flex-1">
       
-      <a href="#" class="flex flex-col items-center justify-center p-2 rounded-xl text-gray-900 bg-white/70 shadow-md hover:bg-white transition-colors duration-200">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
-          <path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.55 1.16 2.03 2.58 2.03 3.45V19h5v-2.5c0-2.33-4.67-3.5-7-3.5z"/>
+      <a 
+        routerLink="/customer-create/customer-info" 
+        routerLinkActive="bg-white/70 shadow-md !text-black" 
+        class="flex flex-col items-center justify-center p-3 text-gray-600 hover:bg-gray-200 transition-colors duration-200 h-[69px] border-b border-gray-300"
+        style="height: 69px;"> 
+        <svg class="w-8 h-8 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
         </svg>
-        <span class="text-xs mt-1">B2C</span>
+        <span class="text-xs font-medium">B2C</span>
       </a>
 
-      <a href="#" class="flex flex-col items-center justify-center p-2 rounded-xl text-gray-600 hover:bg-gray-200 transition-colors duration-200">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
-          <path d="M20 6h-4V4c0-1.11-.89-2-2-2h-4c-1.11 0-2 .89-2 2v2H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zM10 4h4v2h-4V4zM20 19H4V8h16v11z"/>
+      <a 
+        routerLink="/b2b-dashboard" 
+        routerLinkActive="bg-white/70 shadow-md !text-black"
+        class="flex flex-col items-center justify-center p-3 text-gray-600 hover:bg-gray-200 transition-colors duration-200 h-[69px] border-b border-gray-300"
+        style="height: 69px;">
+        <svg class="w-8 h-8 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
         </svg>
-        <span class="text-xs mt-1">B2B</span>
+        <span class="text-xs font-medium">B2B</span>
       </a>
 
-      <a href="#" class="flex flex-col items-center justify-center p-2 rounded-xl text-gray-400 hover:bg-gray-200 transition-colors duration-200 h-20">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
-          <path d="M4 18h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zm0-5h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1z"/>
+      <button 
+        class="flex flex-col items-center justify-center p-3 text-gray-400 hover:bg-gray-200 transition-colors duration-200 h-[69px] border-b border-gray-300"
+        style="height: 69px;">
+        <svg class="w-8 h-8 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
-      </a>
+        <span class="text-xs font-medium">Menu</span>
+      </button>
 
-      <a href="#" class="flex flex-col items-center justify-center p-2 rounded-xl text-gray-400 hover:bg-gray-200 transition-colors duration-200">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
+      <a 
+        routerLink="/feedback" 
+        routerLinkActive="bg-white/70 shadow-md !text-black"
+        class="flex flex-col items-center justify-center p-3 text-gray-600 hover:bg-gray-200 transition-colors duration-200 h-[69px] border-b border-gray-300"
+        style="height: 69px;">
+        <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.5-.53 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2z"/>
         </svg>
       </a>
+    </div>
 
-    </nav>
-    
-    <a href="#" class="flex flex-col items-center justify-center p-4 rounded-b-2xl text-gray-600 hover:bg-red-100 hover:text-red-600 transition-colors duration-200 border-t border-gray-300">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
-            <path d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h6v-2H4V6h6V4zm10 4l-4-4v3H9v2h7v3l4-4z"/>
-        </svg>
+    <a 
+      href="#"
+      (click)="authService.logout()"  
+      class="flex flex-col items-center justify-center p-3 text-gray-600 hover:bg-red-100 hover:text-red-600 transition-colors duration-200 h-[69px]"
+      style="height: 69px;">
+      <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h6v-2H4V6h6V4zm10 4l-4-4v3H9v2h7v3l4-4z"/>
+      </svg>
+      <span class="text-xs font-medium mt-1">Çıkış</span>
     </a>
-  </aside>
+  </nav>
 
- 
-</div>
+</aside>
